--- a/_includes/activity_pub/actor_mention.html
+++ b/_includes/activity_pub/actor_mention.html
@@ -13,7 +13,7 @@
   {% endcapture %}
 
   {% capture mention %}
-    <span class="h-card break-wrap" translate="no">
+    <span class="h-card word-wrap pl2" translate="no">
       {% if include.without_link %}
         <span class="mention">{{- mention -}}</span>
       {% else %}
