--- a/_includes/activity_pub/button_bar.html
+++ b/_includes/activity_pub/button_bar.html
@@ -8,7 +8,7 @@
 {% assign uri = include.uri | default: include.url | default: 'YOU FORGOT THIS PARAM' | strip_html %}
 {% assign actions = site.data.actions.actions %}
 
-<div class="d-flex">
+<div class="flex">
   {% for action in actions %}
     {% assign fa = action.icon %}
     {% include activity_pub/login_modal.html action=action fa=fa uri=uri profile=include.profile description=action.title %}
