--- a/_includes/activity_pub/generic_modal.html
+++ b/_includes/activity_pub/generic_modal.html
@@ -18,38 +18,31 @@
 {% assign footer_class = include.footer_class %}
 {% assign content_class = include.content_class %}
 
-<div
-  class="modal fade mw-100vw"
-  tabindex="-1"
-  aria-hidden="true"
-  data-modal-target="modal"
-  data-action="keydown->modal#hideWithEscape"
->
-  <div class="modal-backdrop fade zindex-backdrop" data-modal-target="backdrop" data-action="click->modal#hide"></div>
-  <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg zindex-modal" role="document">
-    <div class="modal-content {{content_class}}">
+<div aria-hidden="true" class="fixed z-1 top-0 left-0 w-100 h-100 bg-black-50 mw-100" data-action="keydown-&gt;modal#hideWithEscape" data-modal-target="modal" tabindex="-1">
+<div class="fixed top-0 left-0 w-100 h-100 bg-black-50 z-1" data-action="click-&gt;modal#hide" data-modal-target="backdrop"></div>
+<div class="relative w-90 mw6 center modal-dialog-scrollable flex items-center justify-center w-90 mw7 z-999" role="document">
+<div class="bg-white br2 shadow-1">
       {% if header %}
-        <div class="modal-header {{header_class}}">
+        <div class="bb b--black-10 pa3">
           {{ header }}
         </div>
       {% else %}
-        <div class="modal-header justify-content-end border-bottom-0 p-0 {{header_class}}">
-          <span class="px-3 py-2 m-0 h1 font-weight-bold" type="button" data-action="click->modal#hide">&times</span>
-          <span class="sr-only">{{ site.i18n.close }}</span>
-        </div>
+        <div class="bb b--black-10 pa3 justify-end bb-0 pa0">
+<span class="ph3 pv2 ma0 f1 lh-title b" data-action="click-&gt;modal#hide" type="button">×</span>
+<span class="clip">{{ site.i18n.close }}</span>
+</div>
       {% endif %}
 
-      <div class="modal-body {{body_class}}">
+      <div class="pa3">
         {{ body }}
       </div>
-
-      <div class="modal-footer flex-nowrap {{footer_class}}">
+<div class="bt b--black-10 pa3 nowrap">
         {% if footer %}
           {{ footer }}
         {% else %}
-          <button class="btn btn-secondary m-0" type="button" data-action="modal#hide">{{ site.i18n.close }}</button>
+          <button class="pointer br2 ba bg-light-gray dark-gray ma0" data-action="modal#hide" type="button">{{ site.i18n.close }}</button>
         {% endif %}
       </div>
-    </div>
-  </div>
+</div>
+</div>
 </div>
