--- a/_includes/activity_pub/replying_to.html
+++ b/_includes/activity_pub/replying_to.html
@@ -13,8 +13,8 @@
     {{- include.activity.name | default: include.activity.summary | strip_html | default: site.i18n.reply.link_text -}}
   {% endcapture %}
 
-  <div class="py-5 pr-5">
-    <span class="h2">
+  <div class="pv5 pr5">
+<span class="f2 lh-title">
       {{- site.i18n.reply.text -}}
     </span>
 
