Set fallback alt text for images in picture component

--- a/_includes/picture.html
+++ b/_includes/picture.html
@@ -26,5 +26,5 @@ Image component
   <img
     class="{{ include.img_class }}"
     src="{{ include.src | thumbnail: include.width, include.height | uri_escape }}"
-    alt="{{ include.alt | escape_once }}" />
-</picture>
+    alt="{{ include.alt | default: 'Image from Mastodon' | escape_once }}" />
+  </picture>
