--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -2,18 +2,30 @@
 <div class="flex-l items-baseline">
   <div class="w-100 w-50-l pr5">
    <ul class="list pl0 flex flex-wrap f5 f4-l items-center">
-      <li class="pr3"><a href="{{ site.github }}" class="accent link underline-hover" target="_blank" rel="noopener">GitHub</a></li>
-      <li class="pr3"><a href="{{ site.linkedin }}" class="accent link underline-hover" target="_blank" rel="noopener" data-proofer-ignore>LinkedIn</a></li>
-      <li class="pr3"><a href="{{ site.bluesky }}" class="accent link underline-hover" target="_blank" rel="noopener" data-proofer-ignore>Bluesky</a></li>
-      <li class="pr3"><a href="{{ site.twitter }}" class="accent link underline-hover" target="_blank" rel="noopener">Twitter</a></li>
-      <li class="pr3"><a href="{{ site.mastodon }}" class="accent link underline-hover" target="_blank" rel="noopener me">Mastodon</a></li>
-      <li class="pr3"><a href="{{ site.handbook }}" class="accent link underline-hover" target="_blank" rel="noopener">Handbook</a></li>
-      <li class="pr3"><a href="{{ site.url }}{{ site.rss }}" class="accent link underline-hover" target="_blank" rel="noopener">
-        RSS
-        <img style="width:14px;"  src="/assets/images/logos/rss-logo.png" alt="rss icon">
-        </a>
-        </li>
-      <li class="pr3"><a href="{{ site.newsletter }}" class="accent link underline-hover" target="_blank" rel="noopener">Newsletter</a></li>
+    <li class="pr3 pr4-ns mb3"><a href="{{ site.github }}" class="accent link underline-hover" target="_blank" rel="noopener">
+      <img class="w2 h2 w2-5-ns h2-5-ns" src="/assets/images/logos/footer/github_logo.svg" alt="GitHub">
+  </a></li>
+  <li class="pr3 pr4-ns mb3"><a href="{{ site.linkedin }}" class="accent link underline-hover" target="_blank" rel="noopener" data-proofer-ignore>
+      <img class="w2 h2 w2-5-ns h2-5-ns" src="/assets/images/logos/footer/linkedin_logo.svg" alt="LinkedIn">
+  </a></li>
+  <li class="pr3 pr4-ns mb3"><a href="{{ site.bluesky }}" class="accent link underline-hover" target="_blank" rel="noopener" data-proofer-ignore>
+      <img class="w2 h2 w2-5-ns h2-5-ns" src="/assets/images/logos/footer/bluesky_logo.svg" alt="Bluesky">
+  </a></li>
+  <li class="pr3 pr4-ns mb3"><a href="{{ site.twitter }}" class="accent link underline-hover" target="_blank" rel="noopener">
+      <img class="w2 h2 w2-5-ns h2-5-ns" src="/assets/images/logos/footer/x_logo.svg" alt="Twitter/X">
+  </a></li>
+  <li class="pr3 pr4-ns mb3"><a href="{{ site.mastodon }}" class="accent link underline-hover" target="_blank" rel="noopener me">
+      <img class="w2 h2 w2-5-ns h2-5-ns" src="/assets/images/logos/footer/mastodon_logo.svg" alt="Mastodon">
+  </a></li>
+  <li class="pr3 pr4-ns mb3"><a href="{{ site.handbook }}" class="accent link underline-hover" target="_blank" rel="noopener">
+      <img class="w2 h2 w2-5-ns h2-5-ns" src="/assets/images/logos/footer/handbook_logo.svg" alt="Handbook">
+  </a></li>
+  <li class="pr3 pr4-ns mb3"><a href="{{ site.newsletter }}" class="accent link underline-hover" target="_blank" rel="noopener">
+      <img class="w2 h2 w2-5-ns h2-5-ns" src="/assets/images/logos/footer/newsletter_logo.svg" alt="Newsletter">
+  </a></li>
+  <li class="pr3 pr4-ns mb3"><a href="{{ site.url }}{{ site.rss }}" class="accent link underline-hover" target="_blank" rel="noopener">
+    <img class="w2 h2 w2-5-ns h2-5-ns" src="/assets/images/logos/footer/rss_logo.svg" alt="RSS">
+</a></li>
     </ul> <p class="f6 f5-l lh-copy">Data and privacy policies are in our handbook: <a href="https://handbook.hypha.coop/Policies/data.html" target="_blank" class="accent link underline-hover" rel="noopener">How We Use Data</a> and <a href="https://handbook.hypha.coop/Policies/working-open.html" target="_blank" class="accent link underline-hover" rel="noopener">Working Open</a>.</p>
     <p class="f6 f5-l lh-copy">
       This site is published using <a href="https://distributed.press/" target="_blank" class="accent link underline-hover" rel="noopener">Distributed Press</a>.
