--- a/_sass/tachyons-sass/scss/_heights.scss
+++ b/_sass/tachyons-sass/scss/_heights.scss
@@ -42,6 +42,7 @@
 
 .h1 { height: $height-1; }
 .h2 { height: $height-2; }
+.h2-5 { height: $height-2-5; }
 .h3 { height: $height-3; }
 .h4 { height: $height-4; }
 .h5 { height: $height-5; }
@@ -73,6 +74,7 @@
 @media #{$breakpoint-not-small} {
   .h1-ns {  height: $height-1; }
   .h2-ns {  height: $height-2; }
+  .h2-5-ns { height: $height-2-5; }
   .h3-ns {  height: $height-3; }
   .h4-ns {  height: $height-4; }
   .h5-ns {  height: $height-5; }
