--- a/_sass/tachyons-sass/scss/_variables.scss
+++ b/_sass/tachyons-sass/scss/_variables.scss
@@ -33,11 +33,13 @@ $spacing-extra-extra-extra-large: 16rem !default;
 $spacing-copy-separator: 1.5em !default;
 $height-1: 1rem !default;
 $height-2: 2rem !default;
+$height-2-5: 2.5rem !default;
 $height-3: 4rem !default;
 $height-4: 8rem !default;
 $height-5: 16rem !default;
 $width-1: 1rem !default;
 $width-2: 2rem !default;
+$width-2-5: 2.5rem !default;
 $width-3: 4rem !default;
 $width-4: 8rem !default;
 $width-5: 16rem !default;
