Improve footer logo classes

--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -4,35 +4,35 @@
     <ul class="list pl0 flex flex-wrap f5 f4-l items-center">
       <li class="pr3 pr4-ns mb3"><a href="{{ site.github }}" class="accent link underline-hover" target="_blank"
           rel="noopener">
-          <img class="w2 h2 w2-5-ns h2-5-ns" src="/assets/images/logos/footer/github_logo.svg" alt="GitHub">
+          <img class="w2 h2 w2-5-l h2-5-l" src="/assets/images/logos/footer/github_logo.svg" alt="GitHub">
         </a></li>
       <li class="pr3 pr4-ns mb3"><a href="{{ site.linkedin }}" class="accent link underline-hover" target="_blank"
           rel="noopener" data-proofer-ignore>
-          <img class="w2 h2 w2-5-ns h2-5-ns" src="/assets/images/logos/footer/linkedin_logo.svg" alt="LinkedIn">
+          <img class="w2 h2 w2-5-l h2-5-l" src="/assets/images/logos/footer/linkedin_logo.svg" alt="LinkedIn">
         </a></li>
       <li class="pr3 pr4-ns mb3"><a href="{{ site.bluesky }}" class="accent link underline-hover" target="_blank"
           rel="noopener" data-proofer-ignore>
-          <img class="w2 h2 w2-5-ns h2-5-ns" src="/assets/images/logos/footer/bluesky_logo.svg" alt="Bluesky">
+          <img class="w2 h2 w2-5-l h2-5-l" src="/assets/images/logos/footer/bluesky_logo.svg" alt="Bluesky">
         </a></li>
       <li class="pr3 pr4-ns mb3"><a href="{{ site.twitter }}" class="accent link underline-hover" target="_blank"
           rel="noopener">
-          <img class="w2 h2 w2-5-ns h2-5-ns" src="/assets/images/logos/footer/x_logo.svg" alt="Twitter/X">
+          <img class="w2 h2 w2-5-l h2-5-l" src="/assets/images/logos/footer/x_logo.svg" alt="Twitter/X">
         </a></li>
       <li class="pr3 pr4-ns mb3"><a href="{{ site.mastodon }}" class="accent link underline-hover" target="_blank"
           rel="noopener me">
-          <img class="w2 h2 w2-5-ns h2-5-ns" src="/assets/images/logos/footer/mastodon_logo.svg" alt="Mastodon">
+          <img class="w2 h2 w2-5-l h2-5-l" src="/assets/images/logos/footer/mastodon_logo.svg" alt="Mastodon">
         </a></li>
       <li class="pr3 pr4-ns mb3"><a href="{{ site.handbook }}" class="accent link underline-hover" target="_blank"
           rel="noopener">
-          <img class="w2 h2 w2-5-ns h2-5-ns" src="/assets/images/logos/footer/handbook_logo.svg" alt="Handbook">
+          <img class="w2 h2 w2-5-l h2-5-l" src="/assets/images/logos/footer/handbook_logo.svg" alt="Handbook">
         </a></li>
       <li class="pr3 pr4-ns mb3"><a href="{{ site.newsletter }}" class="accent link underline-hover" target="_blank"
           rel="noopener">
-          <img class="w2 h2 w2-5-ns h2-5-ns" src="/assets/images/logos/footer/newsletter_logo.svg" alt="Newsletter">
+          <img class="w2 h2 w2-5-l h2-5-l" src="/assets/images/logos/footer/newsletter_logo.svg" alt="Newsletter">
         </a></li>
       <li class="pr3 pr4-ns mb3"><a href="{{ site.url }}{{ site.rss }}" class="accent link underline-hover"
           target="_blank" rel="noopener">
-          <img class="w2 h2 w2-5-ns h2-5-ns" src="/assets/images/logos/footer/rss_logo.svg" alt="RSS">
+          <img class="w2 h2 w2-5-l h2-5-l" src="/assets/images/logos/footer/rss_logo.svg" alt="RSS">
         </a></li>
     </ul>
     <p class="f6 f5-l lh-copy">Data and privacy policies are in our handbook: <a
