Refactor footer links to use text instead of images for handbook and newsletter

--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -22,18 +22,20 @@
           rel="noopener me">
           <img class="w2 h2 w2-5-l h2-5-l grow-large" src="/assets/images/logos/footer/mastodon_logo.svg" alt="Mastodon">
         </a></li>
-      <li class="pr3 pr4-ns mb3"><a href="{{ site.handbook }}" class="accent link underline-hover" target="_blank"
-          rel="noopener">
-          <img class="w2 h2 w2-5-l h2-5-l grow-large" src="/assets/images/logos/footer/handbook_logo.svg" alt="Handbook">
-        </a></li>
-      <li class="pr3 pr4-ns mb3"><a href="{{ site.newsletter }}" class="accent link underline-hover" target="_blank"
-          rel="noopener">
-          <img class="w2 h2 w2-5-l h2-5-l grow-large" src="/assets/images/logos/footer/newsletter_logo.svg" alt="Newsletter">
-        </a></li>
       <li class="pr3 pr4-ns mb3"><a href="{{ site.url }}{{ site.rss }}" class="accent link underline-hover"
           target="_blank" rel="noopener">
           <img class="w2 h2 w2-5-l h2-5-l grow-large" src="/assets/images/logos/footer/rss_logo.svg" alt="RSS">
         </a></li>
+    </ul>
+    <ul class="list pl0 flex flex-wrap f5 f4-l items-center">
+      <li class="pr3"><a href="{{ site.handbook }}" class="accent link underline-hover" target="_blank"
+        rel="noopener">
+        Handbook
+      </a></li>
+    <li class="pr3"><a href="{{ site.newsletter }}" class="accent link underline-hover" target="_blank"
+        rel="noopener">
+        Newsletter
+      </a></li>
     </ul>
     <p class="f6 f5-l lh-copy">Data and privacy policies are in our handbook: <a
         href="https://handbook.hypha.coop/Policies/data.html" target="_blank" class="accent link underline-hover"
