--- a/_includes/sections/navigation.html
+++ b/_includes/sections/navigation.html
@@ -17,6 +17,12 @@
       <a class="pa3 pv0-l db link underline-hover hover-accent mid-gray " href="/people#openings">Openings</a>
     </li>
   {% endif %}
+  <li>
+    <a class="pa3 pv0-l db link underline-hover hover-accent mid-gray" href="{{ site.handbook }}">Handbook</a>
+  </li>
+  <li>
+    <a class="pa3 pv0-l db link underline-hover hover-accent mid-gray" href="{{ site.newsletter }}">Newsletter</a>
+  </li>
 </ul>
 
 <p class="gray b sans-serif db dn-l "><span class="dib mr2">Email</span><a class="accent link underline-hover dib sans dn-l normal" href="mailto:{{ site.email-hidden }}">{{ site.email }}</a></p>
