--- a/_includes/sections/header.html
+++ b/_includes/sections/header.html
@@ -1,6 +1,6 @@
 <div class="flex sans-serif ">
   <div class="w-90 w-100-ns">
-    <a href="{{ "/" | relative_url }}" class="flex flex-wrap items-baseline no-underline " id="hypha-title">
+    <a href="{{ "/" | relative_url }}" class="flex flex-wrap items-baseline no-underline " id="hypha-title" aria-label="Go to our home page">
       <h1 class="f4 f3-ns fw9 ttu ma0 accent mr2">Hypha</h1>
       <h2 class=" gray f4 fw5 f3-ns normal ma0">Worker Co-operative</h2></a>
   </div>
