Add non-breaking space before dropdown indicator in navigation

--- a/_includes/sections/navigation.html
+++ b/_includes/sections/navigation.html
@@ -11,7 +11,7 @@
           <a class="pa3 pv0-l db link underline-hover hover-accent mid-gray {% if current_page_slug[1] == 'work' %}accent underline{% endif %}" 
              href="{{ page.url | relative_url }}" 
              aria-haspopup="true">
-            {{ page.menu_title }}&#9662;
+            {{ page.menu_title }}&nbsp;&#9662;
           </a>
           <ul class="dropdown-menu absolute bg-white br2 shadow-5 list pa0 mt1 dn flex-column z-1" aria-label="Work submenu">
             <li><a class="pa3 db link underline-hover hover-accent mid-gray {% if current_page contains 'co-creation-lab' %}accent underline{% endif %}" href="/co-creation-lab">Co-Creation Lab</a></li>
