--- a/_includes/sections/who-we-are.html
+++ b/_includes/sections/who-we-are.html
@@ -1,7 +1,7 @@
 <div class="flex justify-between flex-nowrap-ns flex-wrap  mt6-ns mt5 mb4 mr5-l">
     <div class="flex flex-column measure-wide-l measure-m">
       <h2>
-        Cooperation is our DNA
+        Co-operation is our DNA
       </h2>
       <p class="f3 lh-copy mt0">
         Hypha is incorporated as a worker co-operative, which means we’re led by our employees. We believe that serving our member-workers is also the best way to serve our clients long-term.
