Remove drop shadow and border-radius on dropdown menu

--- a/_includes/sections/navigation.html
+++ b/_includes/sections/navigation.html
@@ -13,7 +13,7 @@
              aria-haspopup="true">
             {{ page.menu_title }}&nbsp;&#9662;
           </a>
-          <ul class="dropdown-menu absolute bg-white br2 shadow-5 list pa0 mt1 dn flex-column z-1" aria-label="Work submenu">
+          <ul class="dropdown-menu absolute bg-white list pa0 mt1 dn flex-column z-1" aria-label="Work submenu">
             {%- for page in pages -%}
               {% if page.work_menu_title %}
                 <li>
