Refactor heading levels for consistency and improve layout spacing

--- a/_includes/sections/what-we-do.html
+++ b/_includes/sections/what-we-do.html
@@ -7,7 +7,7 @@
     </p>
   </div>
 </div>
-<div class="flex flex-between justify-between flex-wrap">
+<div class="flex flex-between justify-between flex-wrap pt4">
   {% assign sorted_elements = page.what_we_do | sort: 'order' %}
   {% for element in sorted_elements %}
     <div class="w-30-l measure flex-column justify-left items-left tl pr4">
