--- a/_layouts/practice_area.html
+++ b/_layouts/practice_area.html
@@ -7,18 +7,13 @@
     <a href="#maincontent" class="skip-link absolute top-0 left-0 z-max pa2">Skip to main content</a>
     {%- include sections.html tag="header" path="header.html" class="pt4 flex items-baseline mw9 center justify-between" -%}
     <main id="maincontent" class="mw9 center">
-      <section class="mt4 ph3 pl5-l">
+      <section class="mt2 ph3 pl5-l">
         <header>
           <div class="flex-l items-center mv0">
             <div class="w-100-l mb2">
-              <h3 class="f2 f1-m f-subheadline-l accent normal sans-serif mb4 lh-solid">{{ page.title }}</h3>
+              <h2 class="f2 f1-m f-subheadline-l accent normal sans-serif mb4 lh-solid mt6-ns mt5">{{ page.title }}</h2>
               <div class="f3 measure-wide dark-gray lh-copy mb0">
                 <p class="f3">{{ page.excerpt }}</p>
-                {% if page.diagram %}
-                    <div class='flex items-center justify-center' style="width: 100%;">
-                        <img style='width:80%;' src="{{ page.diagram | relative_url }}" alt="{{ page.diagram_alt_text }}"/>
-                    </div>
-                {% endif %}
                 <p class="f4">
                   <em>{{ page.tagline }}</em>
                 </p>
@@ -26,6 +21,11 @@
                   <p class="pb3 f3 lh-copy measure-wide mb4">
                     {{ page.description }}
                   </p>
+                {% endif %}
+                {% if page.diagram %}
+                    <div class='flex items-center justify-center' style="width: 100%;">
+                        <img style='width:80%;' src="{{ page.diagram | relative_url }}" alt="{{ page.diagram_alt_text }}"/>
+                    </div>
                 {% endif %}
               </div>
             </div>
