--- a/_sass/tachyons-sass/scss/_normalize.scss
+++ b/_sass/tachyons-sass/scss/_normalize.scss
@@ -3,7 +3,7 @@
 
 
 // Custom Media Query Variables
-
+@use "../../variables" as *;
 
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 
