--- a/_sass/_hypha.scss
+++ b/_sass/_hypha.scss
@@ -212,10 +212,10 @@ a.no-underline:hover {
 
 #what_we_do div.accent:hover,
 #values div.accent:hover {
-  background-color: lighten($accent-color, 45%);
+  background-color: color.adjust($accent-color, $lightness: 45%);
 }
 
-// @import 'tachyons-sass/scss/variables';
+// @use 'tachyons-sass/scss/variables';
 
 // @media #{$breakpoint-small} {
   // .flex-wrap-s { flex-wrap: wrap;}
