Move a person's unique ID on the parent container

--- a/_includes/sections/team-bios.html
+++ b/_includes/sections/team-bios.html
@@ -1,7 +1,7 @@
 <div class="flex flex-wrap justify-start mb4 contain">
   {% for person in site.people %}
   {% if person.hidden != true %}
-  <article class="w-33-l pv3-ns ph5-ns mb4 center-m ml0-l">
+  <article class="w-33-l pv3-ns ph5-ns mb4 center-m ml0-l" id="{{ person.name }}">
     <div class="flex items-end">
       <img src="/assets/images/avatars/{{ person.avatar }}" alt="{{ person.name }}" class="w4 tc white f3 v-mid h4">
       <div class="pl4 w-50 pt0 pt0-l v-btm pb0">
@@ -13,7 +13,6 @@
     </div>
     <div
       class="lh-copy measure center f5 pt3"
-      id="{{ person.name }}"
     >
       <div
         class="bio-content"
